<resources>
    <string name="app_name">proyecto_final_gestor_de_tareas_del_hogar</string>

    <string name="registrarse">Registrarse</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="lblContraseña">Contraseña:</string>
    <string name="lblUsuario">Usuario:</string>
    <string name="title_activity_tareas">TareasActivity</string>
    <string name="pestaña_diario">Diario</string>
    <string name="pestaña_semanal">Semanal</string>
    <string name="agregar_tarea">Agregar Tarea</string>
    <string name="lbl_tarea_nombre">Nombre de la tarea:</string>
    <string name="lbl_tarea_descripcion">Descripción:</string>
    <string name="seleccion_dias">Seleccionar por día de semana:</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="unirse">Unirse</string>
    <string name="ingresar_codigo">Ingresar código:</string>
    <string name="unirse_boton">Unirse</string>
    <string name="titulo_hogar">Departamento 1</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="permissions">¿Permitir a los usuarios editar?</string>
    <string name="title_diario" />
    <string name="title_semanal" />

    <string name="previous_week">Semana anterior</string>
    <string name="next_week">Semana siguiente</string>
    <string name="week_number_default">Semana 1</string>
    <string name="weekly_progress">Progreso semanal</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>

    <string name="week_number">Semana %d</string>
    <string name="progress_percentage">%d%%</string>
    <string name="editar" />
</resources>